# micro-service-week1

./: .gitignore  README.md  docker-compose.yml  run.sh
bash/: Dockerfile  README.md  server.sh
cpp/: CMakeLists.txt  README.md  main.cpp
csharp/: Dockerfile  Program.cs  README.md
csharp/Properties/: launchSettings.json
dart/: Dockerfile  README.md  pubspec.yaml
go/: Dockerfile  README.md  go.mod  main.go
java/: Dockerfile  README.md  pom.xml
java/src/main/java/com/example/demo/: ApiResponse.java  DemoApplication.java  HelloController.java
java/src/main/resources/: application.properties
javascript/: Dockerfile  README.md  package.json  server.js
node/: README.md  index.js  package-lock.json  package.json
php/: Dockerfile  README.md  index.php
python/: Dockerfile  README.md  server.py
rust-project/: Cargo.toml  Dockerfile  README.md  cl.bash
rust-project/src/: main.rs
rust-project/web/: index.html
